# demo-altow

./: .gitignore  CMakeLists.txt  Main.qml  StatusBar.qml  main.cpp
patientList/: PatientDelegate.qml  PatientList.qml  PatientModel.qml  patientlist.cpp  patientlist.h
scan/: ScanView.qml  SequenceDelegate.qml  SequenceModel.qml
